--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  
+  "homepage": "https://github.com/Naveen6677/Nike-shoes.git",
   "name": "brand-page",
   "private": true,
   "version": "0.0.0",
