--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://github.com/Naveen6677/Nike-shoes.git",
+  "homepage":"http://Naveen6677.github.io/brand-page",
   "name": "brand-page",
   "private": true,
   "version": "0.0.0",
@@ -31,3 +31,5 @@
     "vite": "^6.0.5"
   }
 }
+
+
